--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mailparser": "^3.9.0",
     "mongoose": "^8.8.0",
-    "node": "^24.10.0"
+    "node": "^24.10.0",
+    "node-imap": "^0.9.6",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
