--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.19.1",
     "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
