--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@elastic/elasticsearch": "^8.19.1",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
