--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@elastic/elasticsearch": "^8.19.1",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
